fix and changes

--- a/DeleteDuplicatesSurveyTexts/App.config
+++ b/DeleteDuplicatesSurveyTexts/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
   <appSettings>
-    <add key="IsTestMode" value="true" />
-    <add key="CmdTimeout" value="300" />
+    <add key="IsTestMode" value="true"/>
+    <add key="CmdTimeout" value="300"/>
   </appSettings>
 
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
   </startup>
 
   <connectionStrings>
-    <add name="Connection" connectionString="Data Source=EFISCO-OFIL;Encrypt=False;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Connection" connectionString="Data Source=EFISCO-OFIL;Encrypt=False;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-
 
 </configuration>
